corpus/statements.txt
===================
Single Line Parse
===================

.shell pwsh # can be one of cmd | pwsh | powershell

alt + h : echo "Hello"

---

(source_file
  (shell_config
    (comment))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command)))

===================
Single Key Parse
===================

.shell pwsh

f11 : komorebic toggle-maximize

---

(source_file
  (shell_config)
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier)))
    (command)))

===================
Special Key Names Parse
===================

.shell pwsh

alt + right : komorebic focus right
ctrl + oem_1 : some_command
shift + num_1 : another_command

---

(source_file
  (shell_config)
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command)))

===================
Full Configuration
===================

.shell cmd

# Specify different behaviour depending on the app
alt + n [
    # ProcessName as shown by `Get-Process`
    Firefox       : echo "hello firefox"

    # Spaces are fine, no quotes required
    Google Chrome : echo "hello chrome"
]

# leading newlines are fine
# line comments should parse and be ignored
alt + right  : komorebic focus right # so should comments at the end of a line
alt + left   : komorebic focus left
alt + up     : komorebic focus up
alt + down   : komorebic focus down

# so should empty lines
alt + oem_1 : komorebic focus-workspace 0 # special keys are fine in the hotkeys section

# trailing newlines are fine

---

(source_file
  (shell_config)
  (comment)
  (process_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (comment)
    (process_mapping
      (process_name)
      (command))
    (comment)
    (process_mapping
      (process_name)
      (command)))
  (comment)
  (comment)
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command)
    (comment))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command))
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command))
  (comment)
  (hotkey_binding
    (hotkey_sequence
      (key
        (key_identifier))
      (key
        (key_identifier)))
    (command)
    (comment))
  (comment))
